--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,12 @@
       <div class="row head">
         <div>Item Icon</div>
         <div>Item Name</div>
-        <div class="right">Price (TC)</div>
+        <div>Price (TC)</div>
       </div>
       <div id="list"></div>
     </div>
 
     <div class="foot" id="count"></div>
-
-    <div class="adminLink">
-      <a href="/admin.html">Admin</a>
-    </div>
   </main>
 
   <script src="./app.js"></script>
