--- a/public/admin.html
+++ b/public/admin.html
@@ -7,60 +7,132 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <header class="top">
-    <h1>Admin Panel</h1>
-    <p class="sub">Only you can login + edit</p>
-    <a class="pill" href="/">← Back to Pricelist</a>
+
+  <header class="adminTop">
+    <div class="adminTopInner">
+      <div class="adminBrand">
+        <div class="dot"></div>
+        <div>
+          <div class="adminTitle">Admin Panel</div>
+          <div class="adminSub">Manage Categories & Items</div>
+        </div>
+      </div>
+
+      <div class="adminActions">
+        <a class="btn ghost" href="/">View Pricelist</a>
+        <button id="logoutBtn" class="btn danger hidden">Logout</button>
+      </div>
+    </div>
   </header>
 
-  <main class="wrap">
+  <main class="wrap adminWrap">
+
+    <!-- LOGIN -->
     <section class="card" id="loginCard">
-      <h2>Login</h2>
-      <div class="grid2">
-        <input id="user" class="input" placeholder="Username" />
-        <input id="pass" class="input" placeholder="Password" type="password" />
+      <h2 class="sectionTitle">Login</h2>
+      <p class="muted">Only admins can access this panel.</p>
+
+      <div class="sectionBlock">
+        <div class="formGrid">
+          <label class="field">
+            <span>Username</span>
+            <input id="user" class="input" placeholder="e.g. ashley" autocomplete="username" />
+          </label>
+
+          <label class="field">
+            <span>Password</span>
+            <input id="pass" class="input" placeholder="Enter your admin password" type="password" autocomplete="current-password" />
+          </label>
+        </div>
+
+        <div class="rowButtons">
+          <button id="loginBtn" class="btn">Login</button>
+          <div class="msg" id="loginMsg"></div>
+        </div>
       </div>
-      <button id="loginBtn" class="btn">Login</button>
-      <div class="msg" id="loginMsg"></div>
     </section>
 
-    <section class="card hidden" id="adminCard">
-      <div class="rowFlex">
-        <h2>Manage</h2>
-        <button id="logoutBtn" class="btn ghost">Logout</button>
-      </div>
+    <!-- ADMIN -->
+    <section class="adminGrid hidden" id="adminCard">
 
-      <hr class="sep"/>
+      <!-- Categories -->
+      <section class="card">
+        <h2 class="sectionTitle">Categories</h2>
+        <p class="muted">Add categories to group items (example: Primordial Uniques).</p>
 
-      <h3>Categories</h3>
-      <div class="rowFlex">
-        <input id="newCat" class="input" placeholder="New category name..." />
-        <button id="addCatBtn" class="btn">Add Category</button>
-      </div>
-      <div id="catList" class="list"></div>
+        <div class="sectionBlock">
+          <div class="inlineForm">
+            <input id="newCat" class="input" placeholder="Category name (e.g. Primordial Uniques)" />
+            <button id="addCatBtn" class="btn">Add Category</button>
+          </div>
 
-      <hr class="sep"/>
+          <div id="catList" class="list"></div>
+          <div class="hint muted" style="margin:10px 0 0;">
+            Tip: A category must be empty before it can be deleted.
+          </div>
+        </div>
+      </section>
 
-      <h3>Add Item</h3>
-      <div class="grid2">
-        <select id="catSelect" class="input"></select>
-        <input id="itemName" class="input" placeholder="Item name" />
-        <input id="itemPrice" class="input" placeholder="Price (TC) e.g. 60,000-100,000" />
-        <input id="itemIcon" class="input" type="file" accept="image/*" />
-      </div>
-      <button id="addItemBtn" class="btn">Add Item</button>
-      <div class="msg" id="itemMsg"></div>
+      <!-- Add Item -->
+      <section class="card">
+        <h2 class="sectionTitle">Add Item</h2>
+        <p class="muted">Upload an icon, enter item name, and set TC price.</p>
 
-      <hr class="sep"/>
+        <div class="sectionBlock">
+          <div class="formGrid">
+            <label class="field">
+              <span>Category</span>
+              <select id="catSelect" class="input"></select>
+            </label>
 
-      <h3>Items</h3>
-      <div class="rowFlex">
-        <select id="filterCat" class="input"></select>
-        <input id="searchItems" class="input" placeholder="Search..." />
-      </div>
-      <div id="itemsTable" class="table mini"></div>
+            <label class="field">
+              <span>Item name</span>
+              <input id="itemName" class="input" placeholder="e.g. Pacman Hair" />
+            </label>
+
+            <label class="field">
+              <span>Price (TC)</span>
+              <input id="itemPrice" class="input" placeholder="e.g. 60000-100000 or 60,000-100,000" />
+            </label>
+
+            <div class="field">
+              <span>Item icon</span>
+              <div class="fileWrap">
+                <label class="fileBtn" for="itemIcon">Upload icon</label>
+                <input id="itemIcon" class="hidden" type="file" accept="image/*" />
+                <div id="fileName" class="fileName">No file selected</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="rowButtons" style="margin-top:14px;">
+            <button id="addItemBtn" class="btn">Add Item</button>
+            <div class="msg" id="itemMsg"></div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Items Table -->
+      <section class="card adminWide">
+        <h2 class="sectionTitle">Items</h2>
+        <p class="muted">Filter, search, and delete items. (Viewer mode is read-only.)</p>
+
+        <div class="sectionBlock">
+          <div class="toolbar">
+            <select id="filterCat" class="input"></select>
+            <input id="searchItems" class="input" placeholder="Search by item name (e.g. Pacman)" />
+            <button id="refreshBtn" class="btn ghost">Refresh</button>
+          </div>
+
+          <div id="itemsTable" class="table mini"></div>
+        </div>
+      </section>
+
     </section>
   </main>
+
+  <!-- toast host -->
+  <div class="toastHost" id="toastHost"></div>
 
   <script src="./admin.js"></script>
 </body>
