--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,19 @@
 <body>
   <header class="top">
     <h1>Item Pricelist</h1>
-    <p class="sub">Read-only mode (search + view)</p>
   </header>
 
   <main class="wrap">
     <div class="controls">
       <select id="category" class="input"></select>
-      <input id="search" class="input" placeholder="Search item name..." />
+      <input id="search" class="input" placeholder="Search..." />
     </div>
 
     <div class="table">
       <div class="row head">
         <div>Item Icon</div>
         <div>Item Name</div>
-        <div>Price (TC)</div>
+        <div>Price</div>
       </div>
       <div id="list"></div>
     </div>
