--- a/public/admin.html
+++ b/public/admin.html
@@ -124,6 +124,50 @@
     </section>
   </main>
 
+  <!-- EDIT MODAL -->
+  <div class="modal hidden" id="editModal" aria-hidden="true">
+    <div class="modalBackdrop" id="editBackdrop"></div>
+    <div class="modalCard" role="dialog" aria-modal="true">
+      <div class="modalHead">
+        <div class="modalTitle">Edit Item</div>
+        <button class="btn ghost small" id="editCloseBtn">Close</button>
+      </div>
+
+      <div class="sectionBlock">
+        <div class="formGrid">
+          <label class="field">
+            <span>Category</span>
+            <select id="editCategory" class="input"></select>
+          </label>
+
+          <label class="field">
+            <span>Item Name</span>
+            <input id="editName" class="input" placeholder="Name" />
+          </label>
+
+          <label class="field">
+            <span>Price</span>
+            <input id="editPrice" class="input" placeholder="60,000-100,000" />
+          </label>
+
+          <div class="field">
+            <span>Change Icon (optional)</span>
+            <div class="fileWrap">
+              <label class="fileBtn" for="editIcon">Upload</label>
+              <input id="editIcon" class="hidden" type="file" accept="image/*" />
+              <div id="editFileName" class="fileName">No file</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="rowButtons" style="margin-top:12px;">
+          <button id="saveEditBtn" class="btn">Save Changes</button>
+          <div class="msg" id="editMsg"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="toastHost" id="toastHost"></div>
 
   <script src="./admin.js"></script>
